--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
   box-sizing: border-box;
+      font-family: 'Anton', sans-serif;
 }
 
 main {
@@ -34,7 +33,30 @@ code {
   align-items: center;
 }
 
+.result {
+  height: 40vh;
+  display: grid;
+  place-content: center;
+  text-align: center;
+  position: relative;
+}
+
+.goldConfetti {
+  position: absolute;
+  left: 50%;
+  top: 20%;
+}
+
+.money {
+  font-size: 8em;
+}
+
+.purpose {
+  font-size: 3em;
+}
+
 .buttonWrapper {
+  z-index:  1;
   display: flex;
   gap: 3em;
 }
@@ -45,15 +67,62 @@ code {
   height: 70px;
   border-radius: 10px;
   border: 0;
-  color: white;
+  text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.8em;
+  transition: transform 0.05s, background-color 0.35s, opacity 0.2s;
+  opacity: 1;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+  background-color: #ffffff;
 }
 
-.button.blue {
-  background-color: #0068A8
+.button:hover {
+  transform: scale(0.98);
+  color: white;
 }
 
-.button.red {
-  background-color: #A82D00
+.button:active {
+  transform: scale(0.95);
+}
+
+.button.blue:hover:not([disabled]),
+.button.blue.active  {
+  background-color: #0068A8;
+}
+
+
+.button.blue:hover:not([disabled])  {
+  box-shadow: 0 0 30px #0068A8;
+}
+
+.button.blue.active  {
+  box-shadow: 0 0 70px #0068A8;
+}
+
+.button.red:hover:not([disabled]),
+.button.red.active {
+  background-color: #A82D00;
+}
+
+.button.red:hover:not([disabled]) {
+  box-shadow: 0 0 30px #A82D00;
+}
+
+.button.red.active {
+  box-shadow: 0 0 70px #A82D00;
+}
+
+.button[disabled] {
+  background-color: white;
+  transform: scale(0.9);
+  opacity: 0.5;
+}
+
+.button.active {
+  transform: scale(1.3);
+  color: white;
+}
+
+.button.active:active {
+  transform: scale(1.25);
 }
